--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
-    <title>Twitter</title>
+    <title>Twitter | on Streaming</title>
+    <script src="js/script.js"></script>
   </head>
   <body>
   </body>
