envoirement with reload well done

--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,17 @@
 <html>
   <head>
     <title>Twitter | on Streaming</title>
-    <script src="js/script.js"></script>
+    <link href="assets/css/main.css" rel="stylesheet" />
+    <script src="assets/js/script.js"></script>
   </head>
   <body>
+    <div class="page-header row">
+       <div class="col-md-1">&nbsp;</div>
+       <div class="col-md-10">
+         <h1>Twitter / backbone - world of streaming</h1>
+       </div>
+       <div class="col-md-1">&nbsp;</div>
+    </div>
+
   </body>
 </html>
