--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
   <head>
     <title>Twitter | on Streaming</title>
     <link href="assets/css/main.css" rel="stylesheet" />
-    <script src="assets/js/script.js"></script>
+
   </head>
   <body>
     <div class="page-header row">
@@ -12,6 +12,12 @@
        </div>
        <div class="col-md-1">&nbsp;</div>
     </div>
+    <div class="row">
+      <div class="col-md-3">&nbsp;</div>
+      <div class="col-md-6" id="form">
+      </div>
 
+    </div>
+    <script src="assets/js/script.js"></script>
   </body>
 </html>
