--- a/src/index.html
+++ b/src/index.html
@@ -6,15 +6,15 @@
   </head>
   <body>
     <div class="page-header row">
-       <div class="col-md-1">&nbsp;</div>
-       <div class="col-md-10">
+       <div class="col-xs-3">&nbsp;</div>
+       <div class="col-xs-6">
          <h1>Twitter / backbone - world of streaming</h1>
        </div>
-       <div class="col-md-1">&nbsp;</div>
+       <div class="col-xs-3">&nbsp;</div>
     </div>
     <div class="row">
-      <div class="col-md-3">&nbsp;</div>
-      <div class="col-md-6" id="form">
+      <div class="col-xs-2">&nbsp;</div>
+      <div class="col-xs-8" id="form">
       </div>
 
     </div>
