--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
   <head>
     <title>Twitter | on Streaming</title>
     <link href="assets/css/main.css" rel="stylesheet" />
-    <script data-main="app/require.js" src="bower_components/requirejs/require.js"></script>
+    <script data-main="require/require.js" src="bower_components/requirejs/require.js"></script>
   </head>
   <body>
     <div class="page-header row">
