--- a/src/index.html
+++ b/src/index.html
@@ -14,9 +14,7 @@
     </div>
     <div class="row">
       <div class="col-xs-2">&nbsp;</div>
-      <div class="col-xs-8" id="form">
-        alvaro
-      </div>
+      <div class="col-xs-8" id="form"></div>
 
     </div>
     <script src="assets/js/script.js"></script>
