--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>Twitter | on Streaming</title>
-    <link href="assets/css/main.css" rel="stylesheet" />
+    <link href="/assets/css/main.css" rel="stylesheet" />
 
   </head>
   <body>
@@ -17,6 +17,6 @@
       <div class="col-xs-8" id="wrapper"></div>
 
     </div>
-    <script src="assets/js/script.js"></script>
+    <script src="/assets/js/script.js"></script>
   </body>
 </html>
