--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <div class="page-header row">
        <div class="col-xs-3">&nbsp;</div>
        <div class="col-xs-6">
-         <h1>Twitter / backbone - world of streaming</h1>
+         <h1 class="text-info">Twitter / backbone - world of streaming</h1>
        </div>
        <div class="col-xs-3">&nbsp;</div>
     </div>
