--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,9 @@
     </div>
     <div class="row">
       <div class="col-xs-2">&nbsp;</div>
-      <div class="col-xs-8" id="wrapper"></div>
+      <div class="col-xs-8" id="contWrapper">
+        <div id="wrapper"></div>
+      </div>
 
     </div>
     <script src="/assets/js/script.js"></script>
